--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,10 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/spamdb
-    username: postgres
-    password: Harsha@123
-    driver-class-name: org.postgresql.Driver
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://dpg-d2nfj97fte5s739chdpg-a.oregon-postgres.render.com:5432/spamdb_gkeb
+spring.datasource.username=harsha
+spring.datasource.password=9Wqdwko6WuzFrhF5MuOFh4Twh4gG5IK5
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-server:
-  port: 8080
+# Optional JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
