--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://dpg-d2nfj97fte5s739chdpg-a.oregon-postgres.render.com:5432/spamdb_gkeb
+    username: harsha
+    password: 9Wqdwko6WuzFrhF5MuOFh4Twh4gG5IK5
+    driver-class-name: org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://dpg-d2nfj97fte5s739chdpg-a.oregon-postgres.render.com:5432/spamdb_gkeb
-spring.datasource.username=harsha
-spring.datasource.password=9Wqdwko6WuzFrhF5MuOFh4Twh4gG5IK5
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Optional JPA settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
