--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,26 @@
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-d3lt09qdbo4c73bdcl20-a:5432/sriharsha?sslmode=require
+    url: jdbc:postgresql://dpg-d3lt09qdbo4c73bdcl20-a.oregon-postgres.render.com:5432/sriharsha
     username: sriharsha
     password: v2NR7mARcB5egr5FNZHr4CNWf4WH7y4y
     driver-class-name: org.postgresql.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+
+  sql:
+    init:
+      mode: always
 
 server:
-  port: ${PORT:8080}  # Render automatically sets the PORT environment variable
+  port: 8080
+
+# Optional: To fix CORS issues when connecting from React (Netlify/localhost:3000)
+cors:
+  allowed-origins: "*"
+  allowed-methods: "*"
